<resources>
    <string name="app_name">CM_recurso</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Fogos.pt</string>
    <string name="nav_header_subtitle">tiagosantos@fogos.pt</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_fires_list">Lista de incêndios</string>
    <string name="menu_fires_map">Mapa</string>
    <string name="menu_fire_registry">Registo de incêndios</string>

    <string name="dashboard_risk_nacional">Risco nacional</string>
    <string name="dashboard_risk_local">Risco zona</string>
    <string name="dashboard_fires_total">Total de incêndios</string>
    <string name="dashboard_firefighters_total">Total de bombeiros</string>
    <string name="dashboard_air_total">Total de meios aéreos</string>
    <string name="dashboard_terrestrial_total">Total de meios terrestres</string>

    <string name="fire_details_card_label">Detalhes incêndio</string>
    <string name="fire_details_status">Estado</string>
    <string name="fire_details_district">Distrido</string>
    <string name="fire_details_conselho">Conselho</string>
    <string name="fire_details_freguesia">Freguesia</string>
    <string name="fire_details_date">Data</string>
    <string name="fire_details_hour">Hora</string>
    <string name="fire_details_observations">Observações</string>

    <string name="fire_details_na">Informação não disponivel</string>
    <string name="fire_details_nomeans">0</string>

    <string name="neww_fire_cardlabel">Registe incêndio</string>
    <string name="neww_fire_registry">Registar</string>
    <string name="neww_fire_name">Nome</string>
    <string name="neww_fire_fiscalnumber">Cartão de cidadão</string>
    <string name="neww_fire_district">Distrito</string>
    <string name="neww_fire_district_filter">Distrito:</string>
    <string name="neww_fire_date">Data</string>
    <string name="neww_fire_photo">Fotografia</string>
    <string name="neww_fire_filter">Filtro</string>
    <string name="neww_fire_observations">Observações</string>

    <string name="risk_low">Risco reduzido</string>
    <string name="risk_moderate">Risco moderado</string>
    <string name="risk_high">Risco elevado</string>
    <string name="risk_very_high">Risco muito Elevado</string>
    <string name="risk_max">Risco máximo</string>

    <string name="settings_title">Settings</string>
    <string name="settings_riskzone_battery">Desactivar o risko de zona com bateria fraca</string>

    <string-array name="district_list">
        <item>Todos os Distritos</item>
        <item>Aveiro</item>
        <item>Beja</item>
        <item>Braga</item>
        <item>Bragança</item>
        <item>Castelo Branco</item>
        <item>Coimbra</item>
        <item>Évora</item>
        <item>Faro</item>
        <item>Guarda</item>
        <item>Leiria</item>
        <item>Lisboa</item>
        <item>Portalegre</item>
        <item>Porto</item>
        <item>Santarém</item>
        <item>Setúbal</item>
        <item>Viana do Castelo</item>
        <item>Vila Real</item>
        <item>Viseu</item>

    </string-array>

    <string-array name="organize_list">
        <item>Ordenar</item>
        <item>Crescente</item>
        <item>Decrescente</item>
    </string-array>

    <string-array name="district_list_new">
        <item>Selecione o distrito</item>
        <item>Aveiro</item>
        <item>Beja</item>
        <item>Braga</item>
        <item>Bragança</item>
        <item>Castelo Branco</item>
        <item>Coimbra</item>
        <item>Évora</item>
        <item>Faro</item>
        <item>Guarda</item>
        <item>Leiria</item>
        <item>Lisboa</item>
        <item>Portalegre</item>
        <item>Porto</item>
        <item>Santarém</item>
        <item>Setúbal</item>
        <item>Viana do Castelo</item>
        <item>Vila Real</item>
        <item>Viseu</item>

    </string-array>

</resources>