<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.new_fire.NewFireFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:elevation="0dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/peach_500"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/signin_signup_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/neww_fire_cardlabel"
                            android:textAlignment="center"
                            android:textColor="#000000"
                            android:textSize="24dp"
                            android:textStyle="bold" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp">

                            <EditText
                                android:id="@+id/new_fire_person_name"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/white"
                                android:hint="@string/neww_fire_name"
                                android:inputType="text"
                                android:maxLines="1"
                                android:textColor="@android:color/black"
                                android:textSize="16sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp">

                            <EditText
                                android:id="@+id/new_fire_person_cc"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/white"
                                android:hint="@string/neww_fire_fiscalnumber"
                                android:inputType="number"
                                android:maxLines="1"
                                android:textColor="@android:color/black"
                                android:textSize="16sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp">

                            <EditText
                                android:id="@+id/new_fire_district"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/white"
                                android:hint="@string/neww_fire_district"
                                android:inputType="text"
                                android:maxLines="1"
                                android:textColor="@android:color/black"
                                android:textSize="16sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <TextView
                            android:id="@+id/new_fire_date_label"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginTop="10sp"
                            android:text="@string/neww_fire_date"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <DatePicker
                            android:id="@+id/dpDate"
                            android:layout_width="match_parent"
                            android:layout_height="128dp"
                            android:layout_weight="1"
                            android:calendarViewShown="false"
                            android:datePickerMode="spinner" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp">

                            <EditText
                                android:id="@+id/new_fire_photo"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/white"
                                android:hint="@string/neww_fire_photo"
                                android:inputType="text"
                                android:maxLines="1"
                                android:textColor="@android:color/black"
                                android:textSize="16sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/button_submit_form"
                            android:layout_width="210dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="24dp"
                            android:layout_marginBottom="16dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:text="@string/neww_fire_registry"
                            android:textAllCaps="false"
                            android:textColor="#fff"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>