<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">


    <LinearLayout
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:weightSum="3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/dashboard_card1"
                android:layout_gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:gravity="center">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        app:cardBackgroundColor="@color/peach_500"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:shapeAppearance="@style/DashboardCard">

                        <LinearLayout
                            android:weightSum="2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Alto"
                                android:textSize="50sp"
                                android:layout_gravity="center"
                                android:textColor="@color/black"
                                android:layout_weight="1"
                                android:gravity="center"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/dashboard_risk_nacional"
                                android:textSize="22sp"
                                android:layout_gravity="center"
                                android:textColor="@color/black"
                                android:layout_weight="1"
                                android:gravity="center"
                                />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/dashboard_card2"
                android:layout_gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:gravity="center">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        app:cardBackgroundColor="@color/peach_500"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:shapeAppearance="@style/DashboardCard">
                        <LinearLayout
                            android:weightSum="2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="57"
                                android:textSize="50sp"
                                android:layout_gravity="center"
                                android:textColor="@color/black"
                                android:layout_weight="1"
                                android:gravity="center"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/dashboard_fires_total"
                                android:textSize="22sp"
                                android:layout_gravity="center"
                                android:textColor="@color/black"
                                android:layout_weight="1"
                                android:gravity="center"
                                />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/dashboard_card3"
                android:layout_gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:gravity="center">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        app:cardBackgroundColor="@color/peach_500"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:shapeAppearance="@style/DashboardCard">
                        <LinearLayout
                            android:weightSum="2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="127"
                                android:textSize="50sp"
                                android:layout_gravity="center"
                                android:textColor="@color/black"
                                android:layout_weight="1"
                                android:gravity="center"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/dashboard_terrestrial_total"
                                android:textSize="22sp"
                                android:layout_gravity="center"
                                android:textColor="@color/black"
                                android:layout_weight="1"
                                android:gravity="center"
                                />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:weightSum="3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/dashboard_card4"
                android:layout_gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                card_view:cardCornerRadius="4dp"
                tools:ignore="NestedWeights">

                <LinearLayout
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:gravity="center">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        app:cardBackgroundColor="@color/peach_500"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:shapeAppearance="@style/DashboardCard">
                        <LinearLayout
                            android:weightSum="2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Médio"
                                android:textSize="50sp"
                                android:layout_gravity="center"
                                android:textColor="@color/black"
                                android:layout_weight="1"
                                android:gravity="center"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/dashboard_risk_local"
                                android:textSize="22sp"
                                android:layout_gravity="center"
                                android:textColor="@color/black"
                                android:layout_weight="1"
                                android:gravity="center"
                                />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/dashboard_card5"
                android:layout_gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:gravity="center">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        app:cardBackgroundColor="@color/peach_500"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:shapeAppearance="@style/DashboardCard">
                        <LinearLayout
                            android:weightSum="2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="523"
                                android:textSize="50sp"
                                android:layout_gravity="center"
                                android:textColor="@color/black"
                                android:layout_weight="1"
                                android:gravity="center"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/dashboard_firefighters_total"
                                android:textSize="22sp"
                                android:layout_gravity="center"
                                android:textColor="@color/black"
                                android:layout_weight="1"
                                android:gravity="center"
                                />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/dashboard_card6"
                android:layout_gravity="center"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                card_view:cardCornerRadius="4dp">

                <LinearLayout
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:gravity="center">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        app:cardBackgroundColor="@color/peach_500"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:shapeAppearance="@style/DashboardCard">
                        <LinearLayout
                            android:weightSum="2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="29"
                                android:textSize="50sp"
                                android:layout_gravity="center"
                                android:textColor="@color/black"
                                android:layout_weight="1"
                                android:gravity="center"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/dashboard_air_total"
                                android:textSize="22sp"
                                android:layout_gravity="center"
                                android:textColor="@color/black"
                                android:layout_weight="1"
                                android:gravity="center"
                                />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>